--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://MariuszBednarz.github.io/game_of_life/",
   "name": "game_of_life",
   "private": true,
   "version": "0.0.0",
